[gd_scene load_steps=17 format=2]

[ext_resource path="res://sprites/background.png" type="Texture" id=1]
[ext_resource path="res://Car game v4/Cars/Car red/Car red.png" type="Texture" id=2]
[ext_resource path="res://scripts/car.gd" type="Script" id=3]
[ext_resource path="res://scripts/player_score_hud.gd" type="Script" id=4]
[ext_resource path="res://sounds/gun_shoot.ogg" type="AudioStream" id=5]
[ext_resource path="res://sounds/gun_reload.wav" type="AudioStream" id=6]
[ext_resource path="res://musics/metallica_one.ogg" type="AudioStream" id=7]
[ext_resource path="res://sounds/car_explosion.wav" type="AudioStream" id=8]
[ext_resource path="res://scripts/background.gd" type="Script" id=9]
[ext_resource path="res://scripts/enemies.gd" type="Script" id=10]
[ext_resource path="res://scripts/player_info.gd" type="Script" id=11]
[ext_resource path="res://game_font.tres" type="DynamicFont" id=12]

[sub_resource type="Shader" id=1]
code = "// NOTE: Shader automatically converted from Godot Engine 3.4.4.stable's CanvasItemMaterial.

shader_type canvas_item;

uniform float velocity = -.5f;
uniform float deslocation = 0;
uniform float time = 0f;

void fragment(){
	COLOR = texture(TEXTURE, UV + (vec2(0, .5) * time * velocity) + vec2(deslocation, 0));
}
"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/velocity = -0.5
shader_param/deslocation = 0.0
shader_param/time = 0.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 8.07226

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.941176, 0.054902, 0.054902, 1 )

[node name="game" type="Node2D"]

[node name="Background" type="Sprite" parent="."]
material = SubResource( 2 )
texture = ExtResource( 1 )
centered = false
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}
car = NodePath("../car")

[node name="car" type="Node2D" parent="."]
position = Vector2( 81, 269 )
scale = Vector2( 0.991049, 1.01027 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CarRed" type="Sprite" parent="car"]
scale = Vector2( 1, 0.993321 )
texture = ExtResource( 2 )

[node name="PLayerCollisionShape" type="Area2D" parent="car"]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="car/PLayerCollisionShape"]
shape = SubResource( 3 )

[node name="enemies" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="spawn_timer" type="Timer" parent="enemies"]

[node name="gun_shoot_fx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="gun_reload_fx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="car_explosion_fx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -20.0
autoplay = true

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="player_info_hud" type="CanvasLayer" parent="."]
script = ExtResource( 11 )

[node name="life_hud_container" type="MarginContainer" parent="player_info_hud"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="player_info_hud/life_hud_container"]
margin_right = 40.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 12 )
text = "Life
"

[node name="ammo_hud_container" type="MarginContainer" parent="player_info_hud"]
margin_top = 30.0
margin_right = 43.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="player_info_hud/ammo_hud_container"]
margin_right = 52.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 12 )
text = "Ammo
"

[node name="player_ammo" type="Label" parent="player_info_hud/ammo_hud_container"]
margin_right = 52.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 12 )
text = "
"

[node name="player_life_bar" type="ProgressBar" parent="player_info_hud"]
margin_top = 19.0
margin_right = 40.0
margin_bottom = 33.0
custom_styles/fg = SubResource( 4 )

[node name="player_score_hud" type="CanvasLayer" parent="."]
offset = Vector2( 108, 0 )
transform = Transform2D( 1, 0, 0, 1, 108, 0 )
script = ExtResource( 4 )

[node name="player_score_hud_container" type="MarginContainer" parent="player_score_hud"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="player_score_hud/player_score_hud_container"]
margin_right = 52.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 12 )
text = "Score
"
align = 2

[node name="player_score" type="Label" parent="player_score_hud/player_score_hud_container"]
margin_right = 52.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 12 )
text = "
"
align = 2

[connection signal="area_entered" from="car/PLayerCollisionShape" to="car" method="_on_PLayerCollisionShape_area_entered"]
[connection signal="timeout" from="enemies/spawn_timer" to="enemies" method="_on_spawn_timer_timeout"]
[connection signal="finished" from="gun_reload_fx" to="car" method="_on_gun_reload_fx_finished"]
